--- a/find_psth_spikeitme.ipynb
+++ b/find_psth_spikeitme.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'dandibs' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n dandibs ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import io\n",
-    "import csv\n",
     "import pandas as pd\n",
     "\n",
-    "path = '/Users/aliyaablitip/Downloads/Pipeline Monkey Schedule.xlsx'\n",
+    "path = 'Pipeline Monkey Schedule.xlsx'\n",
     "data = pd.read_excel(path, sheet_name='Pico')"
    ]
   },
@@ -423,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.12"
   },
   "orig_nbformat": 4
  },
